prevent animation jump when clicking into component

--- a/styleguide/component-select.scss
+++ b/styleguide/component-select.scss
@@ -95,6 +95,23 @@ $selector-fade-easing: linear;
   animation-fill-mode: none;
 }
 
+// suppress initialFadeInOut animation if we're currently hovered over an element
+// when selecting it
+.kiln-suppress-animation.selected > .component-selector > .component-selector-top,
+.kiln-suppress-animation.selected > .component-selector > .component-selector-bottom {
+  animation: none;
+}
+
+.component-selector-wrapper:hover {
+  @media screen and (hover:hover) {
+    backface-visibility: hidden; // unused style to test if mouse is inside element
+  }
+}
+
+.kiln-default-hover .component-selector-wrapper:hover {
+  backface-visibility: hidden; // unused style to test if mouse is inside element
+}
+
 // show selector menus on hover
 // todo: use pointer media query when firefox supports it https://bugzilla.mozilla.org/show_bug.cgi?id=1035774
 .component-selector-wrapper:hover > .component-selector > .component-selector-top,
